<resources>
    <string name="app_name">Digital Force</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inversiones Digital Force</string>
    <string name="nav_header_subtitle">Aplicación Administrativa</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="drawer_home">Inicio</string>
    <string name="drawer_entry">Ingresos</string>
    <string name="drawer_sales">Ventas</string>
    <string name="drawer_services">Servicios</string>
    <string name="drawer_exits">Egresos</string>
    <string name="drawer_expenses">Compras</string>
    <string name="drawer_enterprise">Empresa</string>
    <string name="drawer_catalog">Catálogo</string>
    <string name="drawer_customers">Clientes</string>
    <string name="drawer_stats">Estadísticas</string>

    <!--General-->
    <string name="text_save">Guardar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_totalize">Totalizar</string>
    <string name="text_exit">Salir</string>
    <string name="text_close">Cerrar</string>
    <string name="text_delete">Eliminar</string>
    <string name="text_update">Actualizar</string>
    <string name="error_field_empty">Campo vacío</string>
    <string name="error_data">Error en data</string>
    <string name="text_edit">Editar</string>
    <string name="text_date">Fecha</string>
    <string name="text_quantity">Cantidad</string>
    <string name="error_rate">Error al obtener tasa de cambio</string>
    <string name="text_total_dolar_amount">Total ($) %1$s</string>
    <string name="symbol_bolivar">Bs.</string>
    <string name="symbol_dolar">$</string>
    <string name="text_go">Ir</string>
    <string name="text_share">Compartir</string>

    <!--Dialogs Common-->
    <string name="title_confirmation_dialog">Confirmar</string>
    <string name="msg_exit_dialog">Se perderá toda la información.\n¿Desea salir?</string>
    <string name="msg_delete_dialog">¿Desea eliminar esta información?</string>

    <!--Home-->
    <string name="text_new">Nuevo</string>
    <string name="text_sale">Venta</string>
    <string name="text_service">Servicio</string>
    <string name="text_expense">Compra</string>
    <string name="text_customer">Cliente</string>
    <string name="text_number_expenses">Ha realizado %1$s compra(s) este mes</string>
    <string name="text_not_expense">No ha realizado compras este mes</string>
    <string name="text_number_sales">Ha realizado %1$s venta(s) este mes</string>
    <string name="text_not_sales">No ha realizado ventas este mes</string>
    <string name="text_number_services">Ha realizado %1$s servicio(s) este mes</string>
    <string name="text_not_services">No ha realizado servicios este mes</string>

    <!--Sales-->
    <string name="list_sale_empty">No ha realizado su primera Venta</string>
    <string name="text_invoice_number">#Fact.</string>
    <string name="text_quantity_init">1</string>
    <string name="error_without_customer">Debe seleccionar Cliente</string>
    <string name="error_without_products">Debe agregar al menos un Producto</string>
    <string name="text_subtitle_sales">Resumen de Ventas</string>
    <string name="btn_sale">Generar Factura</string>
    <string name="title_iva_dolar">IVA 16% ($)</string>
    <string name="text_invoice_item">#Fact. asociada: %1$s</string>

    <!--Services-->
    <string name="list_service_empty">No ha realizado su primer Servicio</string>
    <string name="text_subtitle_services">Resumen del Servicio</string>

    <!--Customers-->
    <string name="list_customer_empty">No ha creado su primer Cliente</string>
    <string name="title_add_customer">Agregar cliente</string>
    <string name="title_edit_customer">Editar cliente</string>
    <string name="title_details_customer">Detalles cliente</string>
    <string name="text_name_customer">Razón Social</string>
    <string name="text_id_customer">RIF</string>
    <string name="text_location">Sucursal</string>
    <string name="text_locations">Sucursales</string>
    <string name="error_customer_exists">Este cliente ya existe</string>
    <string name="error_identifier_exists">Este RIF está almacenado con otro cliente</string>
    <string name="error_location_exists">Sucursal ya existe para este cliente</string>
    <string name="text_add_location">Nueva sucursal</string>
    <string name="text_delete_location">Eliminar sucursal</string>
    <string name="text_edit_customer">Editar cliente</string>
    <string name="text_delete_customer">Eliminar cliente</string>
    <string name="title_delete_locations">Seleccione las sucursales a eliminar</string>
    <string name="error_delete_all_locations">No puede eliminar todas las sucursales</string>

    <!--Catalog-->
    <string name="text_product">Producto</string>
    <string name="text_price">Precio ($)</string>
    <string name="text_sell">Vender</string>
    <string name="text_share_pdf">Compartir PDF</string>
    <string name="list_catalog_empty">Sin Productos en el Catálogo</string>
    <string name="title_add_producto_dialog">Crear producto</string>
    <string name="title_edit_producto_dialog">Editar %1$s</string>
    <string name="error_name_exists">Nombre existente</string>
    <string name="text_progress_load">Cargando %1$s</string>
    <string name="error_upload_image">Error al subir imagen</string>
    <string name="txt_error_permiso_lectura">Error de permisos de lectura</string>
    <string name="error_image_notfound">Imagen/archivo no encontrado.</string>
    <string name="error_price_zero">Precio debe ser mayor a cero</string>
    <string name="title_share_dialog">Compartir con</string>
    <string name="text_pdf_load">PDF cargado</string>
    <string name="error_upload_pdf">Error al subir PDF</string>
    <string name="text_price_symbol">($) %1$s</string>

    <!--Expense-->
    <string name="list_expense_empty">No ha realizado su primera Compra</string>
    <string name="text_price_init">0,00</string>
    <string name="text_loading_rate">Cargando tasa de cambio</string>
    <string name="text_rate">Tasa de cambio (Bs. / $)</string>
    <string name="text_total_dolar">Total ($)</string>
    <string name="product_added">Producto ya está en la lista</string>
    <string name="text_price_item">%1$s x $ %2$s</string>
    <string name="text_details">Ver detalles</string>
    <string name="text_number_items">%1$s ítem(s)</string>
    <string name="text_rate_view">(Bs. / $) %1$s</string>

    <!--Settings -->
    <string name="text_about">Información de la App</string>
    <string name="about_title">Desarrollado por&#8230;</string>
    <string name="version_name">Versión %1$s</string>

    <!-- LoginActivity -->
    <string name="text_email_user">Correo electrónico</string>
    <string name="text_password">Contraseña</string>
    <string name="btn_init_session">Iniciar Sesión</string>
    <string name="title_activity_new_sale">NewSaleActivity</string>

    <!-- Stats -->
    <string name="chip_week">Rango de Fecha</string>
    <string name="chip_month">Mensual</string>
    <string name="text_date_range">%1$s - %2$s</string>
    <string name="text_total_graph_zero">Balance en cero en este período</string>
    <string name="text_total_graph_superavit">Tiene un superávit en este período de:\n$ %1$s</string>
    <string name="text_total_graph_deficit">Tiene un déficit en este período de:\n$ %1$s</string>
    <string name="text_amount_add_graph">+ %1$s</string>
    <string name="text_amount_rest_graph">- %1$s</string>

</resources>