<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.skysam.hchirinos.digitalforce.ui.home.HomeFragment"
        android:label="@string/drawer_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sales"
        android:name="com.skysam.hchirinos.digitalforce.ui.sales.SalesFragment"
        android:label="@string/drawer_sales"
        tools:layout="@layout/fragment_sales" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.skysam.hchirinos.digitalforce.ui.services.ServicesFragment"
        android:label="@string/drawer_services"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/nav_expenses"
        android:name="com.skysam.hchirinos.digitalforce.ui.expenses.ExpensesFragment"
        android:label="@string/drawer_expenses"
        tools:layout="@layout/fragment_expenses" />
    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.skysam.hchirinos.digitalforce.ui.catalog.CatalogFragment"
        android:label="@string/drawer_catalog"
        tools:layout="@layout/fragment_catalog" />
    <fragment
        android:id="@+id/nav_stats"
        android:name="com.skysam.hchirinos.digitalforce.ui.stats.StatsFragment"
        android:label="@string/drawer_stats"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/nav_customer"
        android:name="com.skysam.hchirinos.digitalforce.ui.customer.CustomersFragment"
        android:label="@string/drawer_customers"
        tools:layout="@layout/fragment_customers" />
</navigation>